tests/machine/x/c/map_literal_dynamic.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:69:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   69 |   map_int_bool_put(&_t1, "a", x);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:46:51: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:70:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
   70 |   map_int_bool_put(&_t1, "b", y);
      |                          ^~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:46:51: note: expected ‘int’ but argument is of type ‘char *’
   46 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:71:11: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
   71 |   int m = _t1;
      |           ^~~
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:72:18: error: request for member ‘data’ in something not a structure or union
   72 |   printf("%d ", m.data["a"]);
      |                  ^
/workspace/mochi/tests/machine/x/c/map_literal_dynamic.c:73:19: error: request for member ‘data’ in something not a structure or union
   73 |   printf("%d\n", m.data["b"]);
      |                   ^

   1: #include <stdio.h>
